fixed product images on mobile

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -328,7 +328,7 @@ letter-spacing: 3px;
     margin: 0;
   }
 
-  .com-images, .residential-images{
+  .com-images, .residential-images, .product-images, .product-images2{
     height: 220px;
     width: 330px;
 
